# bazelin

./: .bazelrc  .gitignore  Dockerfile  LICENSE  README.md  WORKSPACE  WORKSPACE~HEAD  _run_testdata_builds.sh  angular-metadata.tsconfig.json  bazel-bazelin  bazel-bin  bazel-genfiles  bazel-testlogs  package-lock.json  package.json  tsconfig.json  tslint.json
e2e/bazel-example/hello-world/: BUILD.bazel-sample  hello-world.module.ts
e2e/bazel-example/hello-world/deep/: hello-world.component.scss  hello-world.component.ts
e2e/bazel-example/todos/: todos.component.ts
e2e/ng-cli-new/: angular.json  package.json  tsconfig.json
e2e/ng-cli-new/e2e/src/: app.e2e-spec.ts
e2e/ng-cli-new/src/: index.html  karma.conf.js
e2e/ng-cli-new/src/app/: app.component.spec.ts  app.component.ts
e2e/sass-tilda-imports/styles/: globals.scss  styles.scss  test.globals.scss
e2e/sass-tilda-imports/styles/base/: _fonts.scss
src/: args-parser.ts  package.ts  todo.md  tsconfig.app.json  types.ts
src/file-utils/: file-ext-patterns.ts  read-dependencies.ts  read-files-list.ts  read-workspace.ts
src/lib/: sass-processor.ts  ts-processor.ts
src/rules/: bazel-rule.model.ts  rule-utils.ts
src/rules-nodejs/: npm-package.ts  rollup-bundle.ts
src/rules-sass/: sass-library.ts
src/rules-typescript/: ts-devserver.ts
src/rules/_hack-rules/: main-prod-ng-module.ts
src/rules/rules-angular/: ng-model.ts  ng-module.rule.ts  ng-module.ts  ng-utils.ts
src/rules/rules-nodejs/: npm-package.ts  rollup-bundle.ts
src/rules/rules-sass/: sass-binary.ts  sass-library.ts
src/rules/rules-ts/: ts-library.ts
src/rules/rules-typescript/: ts-devserver.ts  ts-library.ts
src/testdata/application-lazy-loading/: BUILD.bazel  tsconfig.json
src/testdata/application-lazy-loading/app/: BUILD.bazel  app.component.html  app.component.ts
src/testdata/application-lazy-loading/app/lazymodule/component1/: BUILD.bazel  component1-routing.module.ts
src/testdata/application-lazy-loading/app/lazymodule/component2/: BUILD.bazel  component2-routing.module.ts  component2.component.ts
src/testdata/application-non-lazy/: BUILD.bazel
src/testdata/application-non-lazy/app/: BUILD.bazel  app-routing.module.ts
src/testdata/application-non-lazy/app/deep-learning/: BUILD.bazel  deep-learning.component.ts  non-lazy-load.module.ts
src/testdata/dep-v0.17.3-imports_css/: BUILD
src/testdata/library-deps/: BUILD.bazel
src/testdata/ng-app-lazy-loading/: BUILD.want
src/testdata/ng-app-lazy-loading/app/: BUILD.bazel  app-routing.module.ts  app.module.ts
src/testdata/ng-app-lazy-loading/app/lazymodule/component1/: BUILD.bazel  component1.component.ts  component1.module.ts
src/testdata/ng-app-lazy-loading/app/lazymodule/component2/: BUILD.bazel  component2.module.ts
src/testdata/ng-app-non-lazy/: BUILD.bazel  index.html  main.prod.ts
src/testdata/ng-app-non-lazy/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
src/testdata/ng-app-non-lazy/app/deep-learning/: BUILD.bazel  deep-learning-routing.module.ts  deep-learning.component.ts  deep-learning.module.ts  non-lazy-load.module.ts
src/testdata/ng-app-non-lazy/styles/: BUILD.bazel
src/testdata/ng-module/: BUILD  app.component.scss  app.component.ts
src/testdata/ng-module-with-browser/: BUILD  BUILD.want  app.module.ts
src/testdata/sass-demo/: BUILD.bazel  BUILD.want
src/testdata/sass-demo/app/: BUILD.want  app.component.scss
src/testdata/sass-demo/app/widget/: BUILD.bazel  widget.component.scss
src/testdata/sass-hello_world/: BUILD  BUILD.bazel  main.scss
src/testdata/sass-imports_css/: BUILD  BUILD.want  main.scss
src/testdata/sass-nested/: BUILD
src/testdata/sass-nested/dir/: BUILD.want  main.scss
src/testdata/sass-shared/: BUILD  BUILD.want
src/testdata/sass-styles/: BUILD.bazel  BUILD.want  shared.scss
src/testdata/services/: BUILD.bazel  main.service.ts
src/testdata/services/sidekick-service/: BUILD.bazel  sidekick.service.ts
src/testdata/ts-library/: BUILD.bazel
src/testdata/ts-library-deps/: BUILD.bazel  user-list.model.ts
src/testdata/ts-services/: BUILD.want  main.service.ts
src/testdata/ts-services/sidekick-service/: BUILD.bazel
test-data/application/: BUILD.bazel  app.component.html  app.module.ts
