load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "application-lazy-loading",
    srcs = ["main.ts"],
    assets = [
        "//src/testdata/application-lazy-loading/styles:main",
    ],
#    tsconfig = "//src/testdata/application:tsconfig.json",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/platform-browser-dynamic",
        "@angular//packages/router",
        "@npm//tslib",
        "@npm//@types",
        "//src/testdata/application-lazy-loading/app:app-component"
    ],
)

# We always strip these paths off the front of any assets we serve
_ROOT_DIRS = [
    "npm/node_modules/zone.js/dist",
#    "npm/node_modules/@angular/material/prebuilt-themes",
    "npm/node_modules/@ngrx/store/bundles",
]

ts_devserver(
    name = "devserver",
    port = 9898,
    additional_root_paths = [
        "npm/node_modules/zone.js/dist",
        "npm/node_modules/tslib",
    ],
    entry_module = "bazelin/src/testdata/application-lazy-loading/main",
    serving_path = "/bundle.min.js",
    scripts = [
            ":require.config.js",
            ":module-id.js",
            "@npm//node_modules/tslib:tslib.js",
    ],
    static_files = [
        "@npm//node_modules/zone.js:dist/zone.min.js",
        "@npm//node_modules/tslib:tslib.js",
        "index.html",
    ],
    deps = [":application-lazy-loading"],
)
