package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "history_server")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

ng_module(
    name = "application",
     srcs = glob(
            include = ["**/*.ts"],
            exclude = [
                "**/*.spec.ts",
                "main.ts",
                "test.ts",
                "initialize_testbed.ts",
            ],
        ),
    assets = [
        "//src/testdata/ng-app-non-lazy/styles:main",
    ],
    deps = [
        "//src/testdata/ng-app-non-lazy/app:app-component",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/animations",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular/router",
        "@npm//@types",
    ],
)

######################################
# ng serve
######################################

rollup_bundle(
    name = "bundle",
    entry_point = "src/testdata/ng-app-non-lazy/main.prod",
    deps = [
        "//src/testdata/ng-app-non-lazy:application",
        "@npm//@angular/router",
        "@npm//rxjs",
    ],
)

# We always strip these paths off the front of any assets we serve
_ROOT_DIRS = [
    "npm/node_modules/zone.js/dist",
    "npm/node_modules/@ngrx/store/bundles",
]

ts_devserver(
    name = "devserver",
    port = 9898,
    additional_root_paths = [
        "npm/node_modules/zone.js/dist",
        "npm/node_modules/tslib",
    ],
    entry_module = "bazelin/src/testdata/ng-app-non-lazy/main",
    serving_path = "/bundle.min.js",
    scripts = [
#            ":require.config.js",
#            ":module-id.js",
            "@npm//node_modules/tslib:tslib.js",
    ],
    static_files = [
        "@npm//node_modules/zone.js:dist/zone.min.js",
        "@npm//node_modules/tslib:tslib.js",
        "index.html",
    ],
    deps = [":application"],
)
