load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "main-service",
    srcs = ["main.service.ts"],
    deps = [
        "//src/testdata/library-deps:user-list-model",
        "//src/testdata/services/sidekick-service",
        "@angular//packages/common/http",
        "@angular//packages/core",
        "@npm//@types",
        "@rxjs",
    ],
)
