load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "app-component",
    srcs = glob(["*.ts"]),
    assets = [
        ":app.component.html",
        "//src/testdata/application-non-lazy/styles:main",
    ],
#    tsconfig = "//src/testdata/application:tsconfig.json",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/router",
        "@npm//tslib",
        "@npm//@types",
        "//src/testdata/application-non-lazy/app/deep-learning"
    ],
)
