package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "app-component",
    srcs = glob(["*.ts"]),
    assets = [
        ":app.component.html",
        "//src/testdata/ng-app-lazy-loading/styles:main",
    ],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/animations",
        "@npm//@types",
#        "//src/testdata/ng-app-lazy-loading/app/lazymodule/component1",
#        "//src/testdata/ng-app-lazy-loading/app/lazymodule/component2",
    ],
)
