package(default_visibility = ["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
    name = "app-component",
    srcs = glob(["*.ts"]),
    assets = [
        ":app.component.html",
        "//src/testdata/ng-app-non-lazy/styles:main",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/animations",
        "@npm//@angular/router",
        "@npm//@types",
        "//src/testdata/ng-app-non-lazy/app/deep-learning"
    ],
)
