package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "sidekick-service",
    srcs = ["sidekick.service.ts"],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@types",
    ],
)
